# switcheroo-control

./: NEWS  README.md  autogen.sh  configure.ac
data/: Makefile.am  net.hadess.SwitcherooControl.conf  switcheroo-control.service.in
docs/: Makefile.am  switcheroo-control-docs.xml
src/: Makefile.am  net.hadess.SwitcherooControl.xml  switcheroo-control.c
